# gre2g

./: .pre-commit-config.yaml  README.md  gre2g_activate_env.sh  gre2g_run.py  pyproject.toml
algs/key_frame_det/: frames_diff.py  frames_ratio.py  key_frames_det_base.py  pixels_dist.py
commands/: add_recording.py  base_command.py  index_recording.py  init.py
conf/: gre2g_config.yaml
conf/algorithms/key_frame_det/: frames_diff.yaml  frames_ratio.yaml  pixels_dist.yaml
conf/database/: file_system.yaml
conf/run/: add_recording.yaml  index_recording.yaml  init.yaml
docs/: commands.md  development_notes.md  project_installation.md
miscellaneous/: constants.py  enums.py  gre2g_config_schema.py  gre2g_utils.py  structures.py
shared/: config.py
tools/: param_validators.py
tools/config/: config_schema.py  gre2g_config_schema.py  hydra_config.py
tools/database/: base_db.py  file_system_db.py
tools/databases/: aux_pandas_db.py
tools/databases/blob_database/: base_blob_db.py  file_system_db.py
tools/io_handlers/: fs_handler.py  pandas_df_handler.py
